--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,8 +30,9 @@
   ],
   "rules": {
     "prettier/prettier": "error",
-    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-filename-extension": [
       1,
       {
