feat: integration with api github

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,9 +30,15 @@
   ],
   "rules": {
     "prettier/prettier": "error",
-    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react/jsx-one-expression-per-line": "off",
+    "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions":true
+      }
+    ],
     "react/jsx-filename-extension": [
       1,
       {
